<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ExtraDetails"
    android:layoutDirection="ltr">


    <TextView
        android:id="@+id/name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_name_tag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/small_margin_space"/>

    <TextView
        android:id="@+id/country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/name_tag"
        app:layout_constraintTop_toTopOf="@id/name_tag"/>

    <TextView
        android:id="@+id/region_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region_tag"
        app:layout_constraintTop_toBottomOf="@id/name_tag"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/small_margin_space"/>
    <TextView
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/region_tag"
        app:layout_constraintStart_toEndOf="@id/region_tag" />

    <TextView
        android:id="@+id/subRegion_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subRegion_tag"
        app:layout_constraintTop_toBottomOf="@id/region_tag"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/small_margin_space"/>

    <TextView
        android:id="@+id/subRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/subRegion_tag"
        app:layout_constraintStart_toEndOf="@id/subRegion_tag" />

    <TextView
        android:id="@+id/languages_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subRegion_tag"
        android:layout_margin="@dimen/small_margin_space"/>

    <TextView
        android:id="@+id/languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/languages_tag"
        app:layout_constraintStart_toEndOf="@id/languages_tag" />

    <WebView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/languages_tag"
        app:layout_constraintBottom_toTopOf="@id/back"/>


    <Button
        android:id="@+id/back"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/back" />

</androidx.constraintlayout.widget.ConstraintLayout>