<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/country_name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_name_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/small_margin_space"/>
    <TextView
        android:id="@+id/country_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/country_name_tag"
        app:layout_constraintTop_toTopOf="@id/country_name_tag"
        />


    <TextView
        android:id="@+id/capital_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_name_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_name_tag"
        android:layout_margin="@dimen/small_margin_space"
        android:text="@string/capital_tag" />
    <TextView
        android:id="@+id/capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/country_name"
        app:layout_constraintStart_toEndOf="@id/capital_tag"
        app:layout_constraintTop_toTopOf="@id/capital_tag"/>

    <TextView
        android:id="@+id/population_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population_tag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capital_tag"
        android:layout_margin="@dimen/small_margin_space"/>

    <TextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/population_tag"
        app:layout_constraintTop_toTopOf="@id/population_tag"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flag_progressbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/flag_of_the_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country_name_tag"
        android:paddingBottom="@dimen/half_small_margin_space"
        />

</androidx.constraintlayout.widget.ConstraintLayout>